[package]
name = "gitrelease"
version = "0.1.2"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "GitRelease in rust!"
repository = "https://github.com/waldirborbajr/gitrelease"
homepage = "https://github.com/waldirborbajr/gitrelease"
readme  = "README.md"
keywords = ["gitrelease", "devops", "git"]
license = "MIT"

[[bin]]
name = "gitrelease"
path = "src/main.rs"

[dependencies]

[build]
rustflags = ["-z", "threads=8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 'z' # Optimize for size
debug = false
