[package]
name = "gitrelease"
version = "0.1.2"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "GitRelease in rust!"
repository = "https://github.com/waldirborbajr/gitrelease"
homepage = "https://github.com/waldirborbajr/gitrelease"
readme  = "README.md"
keywords = ["gitrelease", "devops", "git", "cli", "terminal"]
license = "MIT"

[[bin]]
name = "gitrelease"
path = "src/main.rs"

[dependencies]

[build]
rustflags = ["-z", "threads=8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
